--- a/public/v1/stylesheets/chat.styl
+++ b/public/v1/stylesheets/chat.styl
@@ -9,9 +9,18 @@ html, body
     height: 100%
     margin: 0 auto
     padding: 0
+    position: relative
+
+    #stats
+      padding: 10px
+      width: 477px
+      margin: 0 auto
+      border-left: 1px solid #ccc
+      border-right: 1px solid #ccc
+
 
     #ctrl
-      width: 500px
+      width: 499px
       height: 30px
       position: absolute
       bottom: 0px
@@ -21,14 +30,13 @@ html, body
 
         input#msg
           float: left
-          width: 428px
+          width: 427px
           border-radius: 0
 
         input[type=submit]
           float: left
           height: 30px
           border-radius: 0
-
 
     #msgs
       width: 497px
