--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     block content
 
   script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js')
+  script(type='text/javascript',src='/vendor/uiji/scripts/uiji.js')
   script(type='text/javascript',src='/v1/socket.io/socket.io.js')
   script(type='text/javascript',src='/v1/javascripts/chat.js')
 
