--- a/public/v1/stylesheets/chat.css
+++ b/public/v1/stylesheets/chat.css
@@ -1,10 +1,12 @@
-html,body{padding:0;margin:0;height:100%;font:14px "Lucida Grande",Helvetica,Arial,sans-serif;}
-html #chat,body #chat{width:500px;height:100%;margin:0 auto;padding:0;position:relative;}
-html #chat #stats,body #chat #stats{padding:10px;width:477px;margin:0 auto;border-left:1px solid #ccc;border-right:1px solid #ccc}
-html #chat #ctrl,body #chat #ctrl{width:499px;height:30px;position:absolute;bottom:0;}
-html #chat #ctrl form,body #chat #ctrl form{overflow:hidden;}
-html #chat #ctrl form input#msg,body #chat #ctrl form input#msg{float:left;width:427px;border-radius:0}
-html #chat #ctrl form input[type=submit],body #chat #ctrl form input[type=submit]{float:left;height:30px;border-radius:0}
-html #chat #msgs,body #chat #msgs{width:497px;height:100%;overflow:hidden;overflow-y:auto;clear:left;border-left:1px solid #ccc;border-right:1px solid #ccc;}
+html,body{padding:0;margin:0;height:100%;font:14px "Lucida Grande",Helvetica,Arial,sans-serif;margin:0 auto;}
+html #chat,body #chat{padding:10px;height:100%;width:100%;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;margin:0 auto;padding:0;position:relative;}
+html #chat #stats,body #chat #stats{padding:10px;border-bottom:1px solid #ccc;width:100%;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;font-size:9px}
+html #chat #ctrl,body #chat #ctrl{width:100%;height:30px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;position:absolute;bottom:0;}
+html #chat #ctrl form,body #chat #ctrl form{overflow:hidden;height:30px;margin-bottom:0 !important;padding:0;}
+html #chat #ctrl form input#msg,body #chat #ctrl form input#msg{float:left;height:30px;width:80%;border-radius:0;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
+html #chat #ctrl form input[type=submit],body #chat #ctrl form input[type=submit]{float:left;height:30px;width:20%;border-radius:0;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
+html #chat #msgs,body #chat #msgs{width:100%;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;overflow:hidden;overflow-y:auto;clear:left;}
 html #chat #msgs > div,body #chat #msgs > div{padding:10px;word-wrap:break;overflow:hidden;}
 html #chat #msgs > div:nth-child(even),body #chat #msgs > div:nth-child(even){background:#efefef}
+body.mobile #ctrl form input#msg{width:100% !important}
+body.mobile #ctrl form input[type=submit]{display:none}
