--- a/public/v1/stylesheets/chat.styl
+++ b/public/v1/stylesheets/chat.styl
@@ -3,49 +3,69 @@ html, body
   margin: 0
   height: 100%
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  margin: 0 auto
 
   #chat
-    width: 500px
+    padding: 10px
     height: 100%
+    width: 100%
+    -webkit-box-sizing: border-box
+    -moz-box-sizing: border-box
+    box-sizing: border-box
     margin: 0 auto
     padding: 0
     position: relative
 
     #stats
       padding: 10px
-      width: 477px
-      margin: 0 auto
-      border-left: 1px solid #ccc
-      border-right: 1px solid #ccc
-
+      border-bottom: 1px solid #ccc
+      width: 100%
+      -webkit-box-sizing: border-box
+      -moz-box-sizing: border-box
+      box-sizing: border-box
+      font-size: 9px
 
     #ctrl
-      width: 499px
+      width: 100%
       height: 30px
+      -webkit-box-sizing: border-box
+      -moz-box-sizing: border-box
+      box-sizing: border-box
       position: absolute
       bottom: 0px
 
       form
         overflow: hidden
+        height: 30px
+        margin-bottom: 0 !important
+        padding: 0
 
         input#msg
           float: left
-          width: 427px
+          height: 30px
+          width: 80%
           border-radius: 0
+          -webkit-box-sizing: border-box
+          -moz-box-sizing: border-box
+          box-sizing: border-box
 
         input[type=submit]
           float: left
           height: 30px
+          width: 20%
           border-radius: 0
+          -webkit-box-sizing: border-box
+          -moz-box-sizing: border-box
+          box-sizing: border-box
 
     #msgs
-      width: 497px
-      height: 100%
+      width: 100%
+      -webkit-box-sizing: border-box
+      -moz-box-sizing: border-box
+      box-sizing: border-box
       overflow: hidden
       overflow-y: auto
       clear: left
-      border-left: 1px solid #ccc
-      border-right: 1px solid #ccc
 
       & > div
         padding: 10px
@@ -55,3 +75,12 @@ html, body
         &:nth-child(even)
           background: #efefef
 
+
+body.mobile
+  #ctrl
+    form
+      input#msg
+        width: 100% !important
+
+      input[type=submit]
+        display: none
