--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,13 +1,15 @@
 doctype 5
 html
   head
-    title bidwars.net
+    title chatla.bz
     link(rel='stylesheet', href='/v1/stylesheets/bootstrap.css')
     link(rel='stylesheet', href='/v1/stylesheets/chat.css')
-  body
+    meta(name='viewport',content='width=device-width, initial-scale=1, maximum-scale=1')
+  body(class=bodyClass)
     block content
 
   script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js')
+  script(type='text/javascript',src='/vendor/jquery/jquery.cookie.js')
   script(type='text/javascript',src='/vendor/uiji/scripts/uiji.js')
   script(type='text/javascript',src='/v1/socket.io/socket.io.js')
   script(type='text/javascript',src='/v1/javascripts/chat.js')
